feat: started examples with bankacc

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -31,7 +31,7 @@ linters:
     - goconst
     - gocritic
     - gocyclo
-    - godot
+    # - godot
     - gomoddirectives
     - goprintffuncname
     - gosec
