--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -41,3 +41,9 @@ tasks:
     desc: Copies the go files for LLMs. Uses pbcopy (mac only).
     cmds:
       - yek ./**/*.go --ignore-patterns "*_mock*" --ignore-patterns "*_test.go" | pbcopy
+
+  gen-diagrams:
+    desc: Generates the d2 gen-diagrams
+    dir: assets
+    cmds:
+      - for f in *.d2; do d2 "$f" "${f%.d2}.svg"; done
