--- a/.golangci.yml
+++ b/.golangci.yml
@@ -21,7 +21,7 @@ linters:
     - exhaustruct
     - exptostd
     - fatcontext
-    - forbidigo
+    # - forbidigo
     - funlen
     - gocheckcompilerdirectives
     # - gochecknoglobals
