feat: support for selector.To for postgres and sqlite

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -12,7 +12,7 @@ linters:
     - copyloopvar
     - cyclop
     - depguard
-    - dupl
+    # - dupl
     - durationcheck
     - errcheck
     - errname
